apps/ghost/base/mysql-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  labels:
    app: mysql-exporter
spec:
  ports:
    - name: metrics
      port: 9104
      targetPort: metrics
  selector:
    app: mysql
