apps/ghost/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - name: http
      port: 80
      targetPort: http
